--- a/src/global.css
+++ b/src/global.css
@@ -3,6 +3,7 @@
   font-size: 16px;
   line-height: 24px;
   font-weight: 400;
+  text-shadow: 0 0 50px gray;
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -39,12 +40,12 @@ h1 {
 
 button {
   border-radius: 8px;
-  border: 1px solid transparent;
+  border: 1px solid cyan;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 2em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: green;
   cursor: pointer;
   transition: border-color 0.25s;
 }
