--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,8 @@
 :root {
   font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
-  text-shadow: 0 0 50px gray;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
